fix horizontal scrollbar on front page

--- a/css/index.css
+++ b/css/index.css
@@ -54,17 +54,25 @@ main {
   margin: 0 1%;
   padding: 8px 10px 5px;
   border-radius: 5px;
-  /*background-color: grey;*/
   color: white;
   font-size: 1.5em;
+  cursor: pointer;
 }
 
 .subscribe {
   background: green;
 }
 
+.subscribe:hover {
+  background-color: darkgreen;
+}
+
 .donate {
   background: red;
+}
+
+.donate:hover {
+  background: darkred;
 }
 
 .social-media {
@@ -78,7 +86,7 @@ main {
   content: " ";
   background: url(/images/social-icons.svg);
   background-size: 500px;
-  margin: 0 1%;
+  margin: 0 .5vw;
 }
 
 .social-media .facebook {
@@ -149,9 +157,10 @@ main {
 /* form */
 .cta-contact-form {
     width: 100%;
-    border: 5px solid
-
+    border: 5px solid;
+    box-sizing: border-box;
 }
+
 .cta-contact-form h1 {
 
 }
@@ -162,15 +171,13 @@ main {
     display: block;
 }
 
-
-
 /* footer */
 
 footer {
     border: 5px solid black;
     width: 100%;
     height: 200px;
-
+    box-sizing: border-box;
 }
 
 footer nav ul {
